fix:Fix the alignment of the codebase

--- a/style.css
+++ b/style.css
@@ -1,199 +1,208 @@
-:root{
-    --inyuma:linear-gradient(to bottom,rgb(83, 3, 83) 40%,rgb(245, 243, 243) 40%,rgb(238, 238, 238) 20%);
-    --transform:capitalize;
-    --t-size:12px;
-    --l-size:14px;
-    --t-color:grey;
-    --l-color:black;
-    --font-family:"work Sans",sans-serif;
-    --btn:whitesmoke;
+:root {
+  --inyuma: linear-gradient(
+    to bottom,
+    rgb(83, 3, 83) 40%,
+    rgb(245, 243, 243) 40%,
+    rgb(238, 238, 238) 20%
+  );
+  --transform: capitalize;
+  --t-size: 12px;
+  --l-size: 14px;
+  --t-color: grey;
+  --l-color: black;
+  --font-family: "work Sans", sans-serif;
+  --btn: whitesmoke;
 }
-body{
-    background: var(--inyuma);
-    background-attachment: fixed;
-    background-size: cover;
+body {
+  background: var(--inyuma);
+  background-attachment: fixed;
+  background-size: cover;
 }
-.box{
-    background-color: whitesmoke;
-    width: 30%;
-    padding:2% 2%;
-    position: absolute;
-    top: 10%;
-    left: 30%;
-    box-shadow: 2px 3px 12px rgb(133, 129, 129);
-    box-shadow: 2px 3px 12px rgb(133, 129, 129);
-    border-radius: 5px;
+.box {
+  background-color: whitesmoke;
+  width: 30%;
+  padding: 2% 2%;
+  position: absolute;
+  top: 10%;
+  left: 30%;
+  box-shadow: 2px 3px 12px rgb(133, 129, 129);
+  box-shadow: 2px 3px 12px rgb(133, 129, 129);
+  border-radius: 5px;
 }
-h1{
+h1 {
+  font-weight: 600;
+  font-family: var(--font-family);
+  margin-left: 30px;
+}
+.q2,
+.q3,
+.q4,
+.q4,
+.q5 {
+  margin-top: 20px;
+}
+label {
+  text-transform: var(--transform);
+  font-size: var(--l-size);
+  font-family: var(--font-family);
+  color: var(--l-color);
+  line-height: 20px;
+  font-style: bold;
+  font-weight: 600;
+}
+
+label,
+button {
+  cursor: pointer;
+}
+label:hover {
+  color: rgb(199, 56, 199);
+}
+button {
+  border-radius: 50%;
+  border: none;
+  background-color: rgb(199, 56, 199);
+  color: var(--btn);
+  font-size: var(--t-size);
+  position: absolute;
+  right: 4%;
+  margin-bottom: 10px;
+}
+
+p {
+  display: none;
+  color: var(--t-color);
+  font-size: var(--t-size);
+  font-family: var(--font-family);
+}
+.row {
+  border-bottom: 1px solid grey;
+  border-radius: 4px;
+  width: 102%;
+  opacity: 0.3;
+  margin-top: 20px;
+}
+.active {
+  display: flex;
+}
+@media (min-width: 200px) and (max-width: 500px) {
+  :root {
+    --tm-size: 11px;
+    --lm-size: 12px;
+  }
+  .box {
+    width: 60%;
+    padding: 1% 10%;
+    top: 3%;
+    left: 10%;
+  }
+  h1 {
+    margin-left: 18px;
+  }
+  label {
+    font-size: var(--lm-size);
+  }
+  button {
+    font-size: var(--tm-size);
     font-weight: 600;
-    font-family: var(--font-family);
-    margin-left: 30px;
-}
-.q2,.q3,.q4,.q4,.q5{
-    margin-top: 20px;
-}
-label{
-    text-transform: var(--transform);
-    font-size: var(--l-size);
-    font-family: var(--font-family);
-    color: var(--l-color);
-    line-height: 20px;
     font-style: bold;
-    font-weight: 600;
-}
-
-label,button{
-    cursor: pointer;
-}
-label:hover{
-    color:  rgb(199, 56, 199);
-}
-button{
-    border-radius: 50%;
-    border: none;
-    background-color: rgb(199, 56, 199);
-    color:var(--btn);
-    font-size: var(--t-size);
-    position: absolute;
-    right: 4%;
-    margin-bottom: 10px;
-}
-
-p{
-    display:none;
+  }
+  p {
+    display: none;
     color: var(--t-color);
-    font-size: var(--t-size);
+    font-size: var(--tm-size);
     font-family: var(--font-family);
-}
-.row{
-    border-bottom: 1px solid grey;
-    border-radius: 4px;
-    width: 102%;
-    opacity: 0.3;
-    margin-top: 20px;
-}
-.active{
-    display: flex;
-}
-@media(min-width:200px) and (max-width:500px){
-    :root{
-        --tm-size:11px;
-        --lm-size:12px;
-    }
-    .box{
-        width: 60%;
-        padding:1% 10%;
-        top: 3%;
-        left: 10%;
-    }
-    h1{
-        margin-left: 18px;
-    }
-    label{
-        font-size: var(--lm-size);
-    }
-    button{
-        font-size: var(--tm-size);
-        font-weight: 600;
-        font-style: bold;
-    }
-    p{
-        display:none;
-        color: var(--t-color);
-        font-size: var(--tm-size);
-        font-family: var(--font-family);
-    }
-    .row{
-        width: 105%;
-    }
+  }
+  .row {
+    width: 105%;
+  }
 }
 
-@media (min-width:500px) and (max-width:600px){
-    :root{
-        --tm-size:12px;
-        --lm-size:12px;
-    }
-    .box{
-        width: 70%;
-        padding:1% 2%;
-        top: 3%;
-        left:10%;
-    }
-    h1{
-        margin-left: 14px;
-        
-    }
-    label{
-        font-size: var(--lm-size);
-    }
-    button{
-        font-size: var(--tm-size);
-        font-weight: 600;
-        font-style: bold;
-    }
-    .row{
-        width: 100%;
-    }
+@media (min-width: 500px) and (max-width: 600px) {
+  :root {
+    --tm-size: 12px;
+    --lm-size: 12px;
+  }
+  .box {
+    width: 70%;
+    padding: 1% 2%;
+    top: 3%;
+    left: 10%;
+  }
+  h1 {
+    margin-left: 14px;
+  }
+  label {
+    font-size: var(--lm-size);
+  }
+  button {
+    font-size: var(--tm-size);
+    font-weight: 600;
+    font-style: bold;
+  }
+  .row {
+    width: 100%;
+  }
 }
 
-@media (min-width:600px) and (max-width:800px){
-    :root{
-        --tm-size:12px;
-        --lm-size:14px;
-    }
-    .box{
-        width: 50%;
-        padding:2% 5%;
-        top: 7%;
-        left:15%;
-    }
-    label{
-        font-size: var(--lm-size);
-    }
-    button{
-        font-size: var(--tm-size);
-        font-weight: 600;
-        font-style: bold;
-    }
+@media (min-width: 600px) and (max-width: 800px) {
+  :root {
+    --tm-size: 12px;
+    --lm-size: 14px;
+  }
+  .box {
+    width: 50%;
+    padding: 2% 5%;
+    top: 7%;
+    left: 15%;
+  }
+  label {
+    font-size: var(--lm-size);
+  }
+  button {
+    font-size: var(--tm-size);
+    font-weight: 600;
+    font-style: bold;
+  }
 }
 
-@media (min-width:800px) and (max-width:1000px){
-    :root{
-        --tm-size:14px;
-        --lm-size:16px;
-    }
-    .box{
-        width: 45%;
-        padding:2% 5%;
-        top: 7%;
-        left:15%;
-    }
-    label{
-        font-size: var(--lm-size);
-    }
-    button{
-        font-size: var(--tm-size);
-        font-weight: 600;
-        font-style: bold;
-    }
+@media (min-width: 800px) and (max-width: 1000px) {
+  :root {
+    --tm-size: 14px;
+    --lm-size: 16px;
+  }
+  .box {
+    width: 45%;
+    padding: 2% 5%;
+    top: 7%;
+    left: 15%;
+  }
+  label {
+    font-size: var(--lm-size);
+  }
+  button {
+    font-size: var(--tm-size);
+    font-weight: 600;
+    font-style: bold;
+  }
 }
-@media (min-width:1000px) and (max-width:1200px){
-    :root{
-        --tm-size:11px;
-        --lm-size:14px;
-        }
-    .box{
-        width: 32%;
-        padding:2% 2%;
-        top: 3%;
-        left:30%;
-    }
-    label{
-        font-size: var(--lm-size);
-    }
-    button{
-        font-size: var(--tm-size);
-        font-weight: 600;
-        font-style: bold;
-    }
+@media (min-width: 1000px) and (max-width: 1200px) {
+  :root {
+    --tm-size: 11px;
+    --lm-size: 14px;
+  }
+  .box {
+    width: 32%;
+    padding: 2% 2%;
+    top: 3%;
+    left: 30%;
+  }
+  label {
+    font-size: var(--lm-size);
+  }
+  button {
+    font-size: var(--tm-size);
+    font-weight: 600;
+    font-style: bold;
+  }
 }
